--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ button, a.button {
 button:hover, a.button:hover {
   background: #005fa3;
 }
+img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 12px;
+  display: block;
+  margin: 0 auto 10px;
+}
+
 @keyframes slide {
   to {
     opacity: 1;
